# bgfx-problem-minimal

./: .gitignore  CMakeLists.txt  README.md  main.cpp
shaders/: compile.sh
shaders/common/: common.sh
shaders/mesh/: frag.sc  varying.def.sc  vert.sc
